--- a/ReadMe
+++ b/ReadMe
@@ -2,3 +2,17 @@ Khotibul Ummam - 201910370311062
 Zidane Putra Sanjaya - 201910370311071
 
 Kecerdasan Buatan B - Agus Eko Minarno, S.Kom., M.Kom.
+
+
+Deskripsi Label Daun Lidah Buaya
+Lidah buaya adalah spesies tumbuhan dengan daun berdaging tebal dari genus Aloe. Tumbuhan ini bersifat menahun, berasal dari Jazirah Arab, dan tanaman liarnya telah menyebar ke kawasan beriklim tropis, semi-tropis, dan kering di berbagai belahan dunia. Lidah Buaya (Aloe vera) telah dipergunakan untuk banyak keperluan selama berabad-abad. Kurang lebih 4000 tahun yang lalu sampai sekarang lidah buaya sangat dikenal khasiatnya karena pada pelepahnya terdapat berbagai macam kandungan nutrisi. Lidah buaya diduga berasal dari kepulauan Canary di sebelah barat Afrika.
+Telah dikenal sebagai obat dan kosmetika sejak berabad-abad silam. Hal ini tercatat dalam Egyptian Book of Remedies. Di dalam buku tersebut diceritakan bahwa pada zaman Cleopatra, lidah buaya dimanfaatkan untuk bahan komestika dan pelembab kulit. Orang Yunani pada awal tahun 333 SM telah mengidentifikasi bahwa lidah buaya sebagai tanaman penyembuh segala penyakit.Menurut Dowling (1985), hanya 3 jenis lidah buaya yang dibudidayakan secara komersil di dunia, yakni: Curacao aloe (Aloe barbadensis Miller), Cape aloe (Aloe ferox Miller), dan Socotrine (Aloe perryl baker). Dari ketiga jenis tersebut yang banyak dimanfaatkan adalah species Aloe barbadensis Miller yang ditemukan oleh Philip Miller. Sedangkan jenis yang banyak dikembangkan di Indonesia adalah Aloe chinensis Baker, yang berasal dari China, tetapi bukan tanaman asli China. Jenis ini di Indonesia sudah ditanam di Kalimantan Barat dan lebih dikenal dengan nama Lidah Buaya Pontianak, yang dideskripsikan oleh Baker pada tahun 1877. Ciri-ciri tanaman ini adalah bunga berwarna oranye, pelepah berwarna hijau muda, pelepah bagian atas agak cekung dan mempunyai totol putih di pelepahnya ketika tanaman masih muda. 
+Dataset ini terdiri dari 2 label, tiap label terdiri dari 50 gambar. Dalam pengambilan label ini menggunakan kamera handphone Model : Infinix Note 8, dengan resolusi 3456 * 4608, ISO 625. Gambar daun semuanya sedikit di putar dan di miringkan agar lebih mudah untuk di lihat.
+
+
+DESKRIPSI LABEL DAUN PANDAN
+Daun Pandan merupakan segolongan tumbuhan monokotil dari genus Pandanus. Sebagian besar anggotanya merupakan tumbuh di pantai-pantai daerah tropika. Anggota tumbuhan ini dicirikan dengan daun yang memanjang (seperti daun palem atau rumput), seringkali tepinya bergerigi. Akarnya besar dan memiliki akar tunjang yang menopang tumbuhan ini. Buah pandan tersusun dalam karangan berbentuk membulat, seperti buah durian. Ukuran tumbuhan ini bervariasi, mulai dari 50cm hingga 5 meter, bahkan di Papua banyak pandan hingga ketinggian 15 meter. Daunnya selalu hijau (hijau abadi, evergreen), sehingga beberapa di antaranya dijadikan tanaman hias. Berbagai jenis pandan menyebar dari Afrika Timur, Asia Tenggara, Australia hingga kepulauan Pasifik.
+
+Jenis-jenis pandan. Paling sedikit ada 600 jenis pandan di seluruh dunia, di antaranya adalah Buah merah (Pandanus conoideus) dari Papua; Pandan wangi (Pandanus ammaryllifolius); Pandan laut (Pandanus tectorius); Pandan duri; Buah merah Papua (Pandanus conoideus); Pandan Melintir (Pandanus utilis); Pandan putih (Pandanus baphtisii); Pandan afrika (Pandanus pygmeus).
+
+Dataset terdiri dari 50 gambar berkualitas cukup tinggi. Daun yang sehat dan matang sehingga enak dipandang merupakan pilihan untuk dataset ini. Instrumen yang dipili antara lain menggunakan kamera Handphone memiliki model: Vivo S1 Pro, background warna putih, dengan resolusi 1536x3296, gambar daun semuanya sedikit di putar dan di miringkan agar lebih mudah untuk di lihat.
